[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
time = "0.3.36"
reqwest = { version = "0.12.9", features = ["blocking"] }
itertools = "0.14.0"
num = "0.4.3"
grid = "0.16.2"
rayon = "1.10.0"
polyfit-rs = "0.2.1"
nalgebra = "0.33.2"
rustworkx-core = "0.16.0"
regex = "1.11.1"
indoc = "2.0.5"
pathfinding = "4.12.0"
