[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
time = "0.3.44"
reqwest = { version = "0.12.24", features = ["blocking"] }
itertools = "0.14.0"
num = "0.4.3"
grid = "1.0.0"
rayon = "1.11.0"
polyfit-rs = "0.2.2"
nalgebra = "0.34.1"
rustworkx-core = "0.17.1"
regex = "1.12.2"
indoc = "2.0.7"
pathfinding = "4.14.0"
z3 = "0.19.5"
